--- a/documentation/classes/InstagramAPI-Response-CheckpointResponse.html
+++ b/documentation/classes/InstagramAPI-Response-CheckpointResponse.html
@@ -290,7 +290,7 @@
                             <tr>
                     <th class="phpdocumentor-heading"><a href="../classes/InstagramAPI-Response-CheckpointResponse.html#constant_JSON_PROPERTY_MAP">JSON_PROPERTY_MAP</a></th>
                     <td class="phpdocumentor-cell"></td>
-                    <td class="phpdocumentor-cell">[&#039;step_name&#039; =&gt; &#039;string&#039;, &#039;challenge&#039; =&gt; &#039;Model\\Challenge&#039;, &#039;step_data&#039; =&gt; &#039;Model\\StepData&#039;, &#039;user_id&#039; =&gt; &#039;string&#039;, &#039;nonce_code&#039; =&gt; &#039;string&#039;]</td>
+                    <td class="phpdocumentor-cell">[&#039;step_name&#039; =&gt; &#039;string&#039;, &#039;challenge&#039; =&gt; &#039;Model\\Challenge&#039;, &#039;step_data&#039; =&gt; &#039;Model\\StepData&#039;, &#039;user_id&#039; =&gt; &#039;string&#039;, &#039;nonce_code&#039; =&gt; &#039;string&#039;, &#039;action&#039; =&gt; &#039;string&#039;]</td>
                 </tr>
                                                                 <tr>
                     <th class="phpdocumentor-heading"><a href="../classes/InstagramAPI-Response.html#property_httpResponse">$httpResponse</a></th>
@@ -564,7 +564,7 @@
         <span class="phpdocumentor-signature__visibility">public</span>
         <span class="phpdocumentor-signature__type">mixed</span>
         <span class="phpdocumentor-signature__name">$JSON_PROPERTY_MAP</span>
-        = <span class="phpdocumentor-signature__default-value">[&#039;step_name&#039; =&gt; &#039;string&#039;, &#039;challenge&#039; =&gt; &#039;Model\\Challenge&#039;, &#039;step_data&#039; =&gt; &#039;Model\\StepData&#039;, &#039;user_id&#039; =&gt; &#039;string&#039;, &#039;nonce_code&#039; =&gt; &#039;string&#039;]</span>
+        = <span class="phpdocumentor-signature__default-value">[&#039;step_name&#039; =&gt; &#039;string&#039;, &#039;challenge&#039; =&gt; &#039;Model\\Challenge&#039;, &#039;step_data&#039; =&gt; &#039;Model\\StepData&#039;, &#039;user_id&#039; =&gt; &#039;string&#039;, &#039;nonce_code&#039; =&gt; &#039;string&#039;, &#039;action&#039; =&gt; &#039;string&#039;]</span>
     </code>
             
 </article>
