--- a/documentation/classes/InstagramAPI-Response-WebCheckpointResponse.html
+++ b/documentation/classes/InstagramAPI-Response-WebCheckpointResponse.html
@@ -218,7 +218,7 @@
                             <tr>
                     <th class="phpdocumentor-heading"><a href="../classes/InstagramAPI-Response-WebCheckpointResponse.html#constant_JSON_PROPERTY_MAP">JSON_PROPERTY_MAP</a></th>
                     <td class="phpdocumentor-cell"></td>
-                    <td class="phpdocumentor-cell">[&#039;entry_data&#039; =&gt; &#039;Model\\ChallengeEntryData&#039;, &#039;challenge&#039; =&gt; &#039;Model\\WebChallenge&#039;]</td>
+                    <td class="phpdocumentor-cell">[&#039;entry_data&#039; =&gt; &#039;Model\\ChallengeEntryData&#039;, &#039;challenge&#039; =&gt; &#039;Model\\WebChallenge&#039;, &#039;challengeType&#039; =&gt; &#039;string&#039;]</td>
                 </tr>
                                                                 <tr>
                     <th class="phpdocumentor-heading"><a href="../classes/InstagramAPI-Response.html#property_httpResponse">$httpResponse</a></th>
@@ -452,7 +452,7 @@
         <span class="phpdocumentor-signature__visibility">public</span>
         <span class="phpdocumentor-signature__type">mixed</span>
         <span class="phpdocumentor-signature__name">$JSON_PROPERTY_MAP</span>
-        = <span class="phpdocumentor-signature__default-value">[&#039;entry_data&#039; =&gt; &#039;Model\\ChallengeEntryData&#039;, &#039;challenge&#039; =&gt; &#039;Model\\WebChallenge&#039;]</span>
+        = <span class="phpdocumentor-signature__default-value">[&#039;entry_data&#039; =&gt; &#039;Model\\ChallengeEntryData&#039;, &#039;challenge&#039; =&gt; &#039;Model\\WebChallenge&#039;, &#039;challengeType&#039; =&gt; &#039;string&#039;]</span>
     </code>
             
 </article>
@@ -650,7 +650,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Response/WebCheckpointResponse.php"><a href="../files/src-response-webcheckpointresponse.html"><abbr title="src/Response/WebCheckpointResponse.php">WebCheckpointResponse.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">38</span>
+        <span class="phpdocumentor-element-found-in__line">39</span>
     </aside>
         <code class="phpdocumentor-signature phpdocumentor-code ">
         <span class="phpdocumentor-signature__visibility">public</span>
@@ -678,7 +678,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Response/WebCheckpointResponse.php"><a href="../files/src-response-webcheckpointresponse.html"><abbr title="src/Response/WebCheckpointResponse.php">WebCheckpointResponse.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">47</span>
+        <span class="phpdocumentor-element-found-in__line">50</span>
     </aside>
         <code class="phpdocumentor-signature phpdocumentor-code ">
         <span class="phpdocumentor-signature__visibility">public</span>
@@ -706,7 +706,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Response/WebCheckpointResponse.php"><a href="../files/src-response-webcheckpointresponse.html"><abbr title="src/Response/WebCheckpointResponse.php">WebCheckpointResponse.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">56</span>
+        <span class="phpdocumentor-element-found-in__line">59</span>
     </aside>
         <code class="phpdocumentor-signature phpdocumentor-code ">
         <span class="phpdocumentor-signature__visibility">public</span>
@@ -734,7 +734,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Response/WebCheckpointResponse.php"><a href="../files/src-response-webcheckpointresponse.html"><abbr title="src/Response/WebCheckpointResponse.php">WebCheckpointResponse.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">61</span>
+        <span class="phpdocumentor-element-found-in__line">64</span>
     </aside>
         <code class="phpdocumentor-signature phpdocumentor-code ">
         <span class="phpdocumentor-signature__visibility">public</span>
