--- a/documentation/classes/InstagramAPI-Constants.html
+++ b/documentation/classes/InstagramAPI-Constants.html
@@ -256,7 +256,7 @@
                             <tr>
                     <th class="phpdocumentor-heading"><a href="../classes/InstagramAPI-Constants.html#constant_SUPPORTED_CAPABILITIES">SUPPORTED_CAPABILITIES</a></th>
                     <td class="phpdocumentor-cell"></td>
-                    <td class="phpdocumentor-cell">[[&#039;name&#039; =&gt; &#039;SUPPORTED_SDK_VERSIONS&#039;, &#039;value&#039; =&gt; &#039;90.0,91.0,92.0,93.0,94.0,95.0,96.0,97.0,98.0,99.0,100.0,101.0,102.0,103.0,104.0,105.0,106.0,107.0,108.0,109.0,110.0,111.0,112.0,113.0&#039;], [&#039;name&#039; =&gt; &#039;FACE_TRACKER_VERSION&#039;, &#039;value&#039; =&gt; &#039;14&#039;], [&#039;name&#039; =&gt; &#039;segmentation&#039;, &#039;value&#039; =&gt; &#039;segmentation_enabled&#039;], [&#039;name&#039; =&gt; &#039;COMPRESSION&#039;, &#039;value&#039; =&gt; &#039;ETC2_COMPRESSION&#039;], [&#039;name&#039; =&gt; &#039;world_tracker&#039;, &#039;value&#039; =&gt; &#039;world_tracker_enabled&#039;], [&#039;name&#039; =&gt; &#039;gyroscope&#039;, &#039;value&#039; =&gt; &#039;gyroscope_enabled&#039;]]</td>
+                    <td class="phpdocumentor-cell">[[&#039;name&#039; =&gt; &#039;SUPPORTED_SDK_VERSIONS&#039;, &#039;value&#039; =&gt; &#039;100.0,101.0,102.0,103.0,104.0,105.0,106.0,107.0,108.0,109.0,110.0,111.0,112.0,113.0,114.0,115.0,116.0,117.0&#039;], [&#039;name&#039; =&gt; &#039;FACE_TRACKER_VERSION&#039;, &#039;value&#039; =&gt; &#039;14&#039;], [&#039;name&#039; =&gt; &#039;COMPRESSION&#039;, &#039;value&#039; =&gt; &#039;ETC2_COMPRESSION&#039;], [&#039;name&#039; =&gt; &#039;world_tracker&#039;, &#039;value&#039; =&gt; &#039;world_tracker_enabled&#039;]]</td>
                 </tr>
                             <tr>
                     <th class="phpdocumentor-heading"><a href="../classes/InstagramAPI-Constants.html#constant_FACEBOOK_OTA_FIELDS">FACEBOOK_OTA_FIELDS</a></th>
@@ -1141,7 +1141,7 @@
         <span class="phpdocumentor-signature__visibility">public</span>
         <span class="phpdocumentor-signature__type">mixed</span>
         <span class="phpdocumentor-signature__name">$SUPPORTED_CAPABILITIES</span>
-        = <span class="phpdocumentor-signature__default-value">[[&#039;name&#039; =&gt; &#039;SUPPORTED_SDK_VERSIONS&#039;, &#039;value&#039; =&gt; &#039;90.0,91.0,92.0,93.0,94.0,95.0,96.0,97.0,98.0,99.0,100.0,101.0,102.0,103.0,104.0,105.0,106.0,107.0,108.0,109.0,110.0,111.0,112.0,113.0&#039;], [&#039;name&#039; =&gt; &#039;FACE_TRACKER_VERSION&#039;, &#039;value&#039; =&gt; &#039;14&#039;], [&#039;name&#039; =&gt; &#039;segmentation&#039;, &#039;value&#039; =&gt; &#039;segmentation_enabled&#039;], [&#039;name&#039; =&gt; &#039;COMPRESSION&#039;, &#039;value&#039; =&gt; &#039;ETC2_COMPRESSION&#039;], [&#039;name&#039; =&gt; &#039;world_tracker&#039;, &#039;value&#039; =&gt; &#039;world_tracker_enabled&#039;], [&#039;name&#039; =&gt; &#039;gyroscope&#039;, &#039;value&#039; =&gt; &#039;gyroscope_enabled&#039;]]</span>
+        = <span class="phpdocumentor-signature__default-value">[[&#039;name&#039; =&gt; &#039;SUPPORTED_SDK_VERSIONS&#039;, &#039;value&#039; =&gt; &#039;100.0,101.0,102.0,103.0,104.0,105.0,106.0,107.0,108.0,109.0,110.0,111.0,112.0,113.0,114.0,115.0,116.0,117.0&#039;], [&#039;name&#039; =&gt; &#039;FACE_TRACKER_VERSION&#039;, &#039;value&#039; =&gt; &#039;14&#039;], [&#039;name&#039; =&gt; &#039;COMPRESSION&#039;, &#039;value&#039; =&gt; &#039;ETC2_COMPRESSION&#039;], [&#039;name&#039; =&gt; &#039;world_tracker&#039;, &#039;value&#039; =&gt; &#039;world_tracker_enabled&#039;]]</span>
     </code>
             
 </article>
@@ -1157,7 +1157,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Constants.php"><a href="../files/src-constants.html"><abbr title="src/Constants.php">Constants.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">85</span>
+        <span class="phpdocumentor-element-found-in__line">77</span>
     </aside>
         <code class="phpdocumentor-signature phpdocumentor-code ">
         <span class="phpdocumentor-signature__visibility">public</span>
@@ -1179,7 +1179,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Constants.php"><a href="../files/src-constants.html"><abbr title="src/Constants.php">Constants.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">86</span>
+        <span class="phpdocumentor-element-found-in__line">78</span>
     </aside>
         <code class="phpdocumentor-signature phpdocumentor-code ">
         <span class="phpdocumentor-signature__visibility">public</span>
@@ -1201,7 +1201,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Constants.php"><a href="../files/src-constants.html"><abbr title="src/Constants.php">Constants.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">87</span>
+        <span class="phpdocumentor-element-found-in__line">79</span>
     </aside>
         <code class="phpdocumentor-signature phpdocumentor-code ">
         <span class="phpdocumentor-signature__visibility">public</span>
@@ -1223,7 +1223,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Constants.php"><a href="../files/src-constants.html"><abbr title="src/Constants.php">Constants.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">88</span>
+        <span class="phpdocumentor-element-found-in__line">80</span>
     </aside>
         <code class="phpdocumentor-signature phpdocumentor-code ">
         <span class="phpdocumentor-signature__visibility">public</span>
@@ -1245,7 +1245,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Constants.php"><a href="../files/src-constants.html"><abbr title="src/Constants.php">Constants.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">89</span>
+        <span class="phpdocumentor-element-found-in__line">81</span>
     </aside>
         <code class="phpdocumentor-signature phpdocumentor-code ">
         <span class="phpdocumentor-signature__visibility">public</span>
@@ -1267,7 +1267,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Constants.php"><a href="../files/src-constants.html"><abbr title="src/Constants.php">Constants.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">92</span>
+        <span class="phpdocumentor-element-found-in__line">84</span>
     </aside>
         <code class="phpdocumentor-signature phpdocumentor-code ">
         <span class="phpdocumentor-signature__visibility">public</span>
@@ -1289,7 +1289,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Constants.php"><a href="../files/src-constants.html"><abbr title="src/Constants.php">Constants.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">93</span>
+        <span class="phpdocumentor-element-found-in__line">85</span>
     </aside>
         <code class="phpdocumentor-signature phpdocumentor-code ">
         <span class="phpdocumentor-signature__visibility">public</span>
@@ -1311,7 +1311,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Constants.php"><a href="../files/src-constants.html"><abbr title="src/Constants.php">Constants.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">94</span>
+        <span class="phpdocumentor-element-found-in__line">86</span>
     </aside>
         <code class="phpdocumentor-signature phpdocumentor-code ">
         <span class="phpdocumentor-signature__visibility">public</span>
@@ -1333,7 +1333,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Constants.php"><a href="../files/src-constants.html"><abbr title="src/Constants.php">Constants.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">95</span>
+        <span class="phpdocumentor-element-found-in__line">87</span>
     </aside>
         <code class="phpdocumentor-signature phpdocumentor-code ">
         <span class="phpdocumentor-signature__visibility">public</span>
@@ -1355,7 +1355,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Constants.php"><a href="../files/src-constants.html"><abbr title="src/Constants.php">Constants.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">98</span>
+        <span class="phpdocumentor-element-found-in__line">90</span>
     </aside>
         <code class="phpdocumentor-signature phpdocumentor-code ">
         <span class="phpdocumentor-signature__visibility">public</span>
@@ -1377,7 +1377,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Constants.php"><a href="../files/src-constants.html"><abbr title="src/Constants.php">Constants.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">99</span>
+        <span class="phpdocumentor-element-found-in__line">91</span>
     </aside>
         <code class="phpdocumentor-signature phpdocumentor-code ">
         <span class="phpdocumentor-signature__visibility">public</span>
@@ -1399,7 +1399,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Constants.php"><a href="../files/src-constants.html"><abbr title="src/Constants.php">Constants.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">100</span>
+        <span class="phpdocumentor-element-found-in__line">92</span>
     </aside>
         <code class="phpdocumentor-signature phpdocumentor-code ">
         <span class="phpdocumentor-signature__visibility">public</span>
@@ -1421,7 +1421,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Constants.php"><a href="../files/src-constants.html"><abbr title="src/Constants.php">Constants.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">101</span>
+        <span class="phpdocumentor-element-found-in__line">93</span>
     </aside>
         <code class="phpdocumentor-signature phpdocumentor-code ">
         <span class="phpdocumentor-signature__visibility">public</span>
@@ -1443,7 +1443,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Constants.php"><a href="../files/src-constants.html"><abbr title="src/Constants.php">Constants.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">102</span>
+        <span class="phpdocumentor-element-found-in__line">94</span>
     </aside>
         <code class="phpdocumentor-signature phpdocumentor-code ">
         <span class="phpdocumentor-signature__visibility">public</span>
@@ -1465,7 +1465,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Constants.php"><a href="../files/src-constants.html"><abbr title="src/Constants.php">Constants.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">103</span>
+        <span class="phpdocumentor-element-found-in__line">95</span>
     </aside>
         <code class="phpdocumentor-signature phpdocumentor-code ">
         <span class="phpdocumentor-signature__visibility">public</span>
@@ -1487,7 +1487,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Constants.php"><a href="../files/src-constants.html"><abbr title="src/Constants.php">Constants.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">104</span>
+        <span class="phpdocumentor-element-found-in__line">96</span>
     </aside>
         <code class="phpdocumentor-signature phpdocumentor-code ">
         <span class="phpdocumentor-signature__visibility">public</span>
@@ -1509,7 +1509,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Constants.php"><a href="../files/src-constants.html"><abbr title="src/Constants.php">Constants.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">105</span>
+        <span class="phpdocumentor-element-found-in__line">97</span>
     </aside>
         <code class="phpdocumentor-signature phpdocumentor-code ">
         <span class="phpdocumentor-signature__visibility">public</span>
@@ -1531,7 +1531,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Constants.php"><a href="../files/src-constants.html"><abbr title="src/Constants.php">Constants.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">108</span>
+        <span class="phpdocumentor-element-found-in__line">100</span>
     </aside>
         <code class="phpdocumentor-signature phpdocumentor-code ">
         <span class="phpdocumentor-signature__visibility">public</span>
@@ -1553,7 +1553,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Constants.php"><a href="../files/src-constants.html"><abbr title="src/Constants.php">Constants.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">109</span>
+        <span class="phpdocumentor-element-found-in__line">101</span>
     </aside>
         <code class="phpdocumentor-signature phpdocumentor-code ">
         <span class="phpdocumentor-signature__visibility">public</span>
@@ -1575,7 +1575,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Constants.php"><a href="../files/src-constants.html"><abbr title="src/Constants.php">Constants.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">110</span>
+        <span class="phpdocumentor-element-found-in__line">102</span>
     </aside>
         <code class="phpdocumentor-signature phpdocumentor-code ">
         <span class="phpdocumentor-signature__visibility">public</span>
@@ -1597,7 +1597,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Constants.php"><a href="../files/src-constants.html"><abbr title="src/Constants.php">Constants.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">113</span>
+        <span class="phpdocumentor-element-found-in__line">105</span>
     </aside>
         <code class="phpdocumentor-signature phpdocumentor-code ">
         <span class="phpdocumentor-signature__visibility">public</span>
@@ -1619,7 +1619,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Constants.php"><a href="../files/src-constants.html"><abbr title="src/Constants.php">Constants.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">114</span>
+        <span class="phpdocumentor-element-found-in__line">106</span>
     </aside>
         <code class="phpdocumentor-signature phpdocumentor-code ">
         <span class="phpdocumentor-signature__visibility">public</span>
@@ -1641,7 +1641,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Constants.php"><a href="../files/src-constants.html"><abbr title="src/Constants.php">Constants.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">117</span>
+        <span class="phpdocumentor-element-found-in__line">109</span>
     </aside>
         <code class="phpdocumentor-signature phpdocumentor-code ">
         <span class="phpdocumentor-signature__visibility">public</span>
@@ -1663,7 +1663,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Constants.php"><a href="../files/src-constants.html"><abbr title="src/Constants.php">Constants.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">141</span>
+        <span class="phpdocumentor-element-found-in__line">133</span>
     </aside>
         <code class="phpdocumentor-signature phpdocumentor-code ">
         <span class="phpdocumentor-signature__visibility">public</span>
@@ -1685,7 +1685,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Constants.php"><a href="../files/src-constants.html"><abbr title="src/Constants.php">Constants.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">149</span>
+        <span class="phpdocumentor-element-found-in__line">141</span>
     </aside>
         <code class="phpdocumentor-signature phpdocumentor-code ">
         <span class="phpdocumentor-signature__visibility">public</span>
@@ -1707,7 +1707,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Constants.php"><a href="../files/src-constants.html"><abbr title="src/Constants.php">Constants.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">150</span>
+        <span class="phpdocumentor-element-found-in__line">142</span>
     </aside>
         <code class="phpdocumentor-signature phpdocumentor-code ">
         <span class="phpdocumentor-signature__visibility">public</span>
@@ -1729,7 +1729,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Constants.php"><a href="../files/src-constants.html"><abbr title="src/Constants.php">Constants.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">153</span>
+        <span class="phpdocumentor-element-found-in__line">145</span>
     </aside>
         <code class="phpdocumentor-signature phpdocumentor-code ">
         <span class="phpdocumentor-signature__visibility">public</span>
