--- a/documentation/classes/InstagramAPI-Request-People.html
+++ b/documentation/classes/InstagramAPI-Request-People.html
@@ -1620,7 +1620,7 @@ rejection. If they're harassing you, use People::block() instead.</p></section>
                     <span class="phpdocumentor-signature__argument__name">$order</span>
                     : <span class="phpdocumentor-signature__argument__return-type">string|null</span>
                      = <span class="phpdocumentor-signature__argument__default-value">null</span>                </dt>
-                <dd class="phpdocumentor-argument-list__definition"><section class="phpdocumentor-description"><p>Search order. Latest followings: 'date_followed_earliest',
+                <dd class="phpdocumentor-argument-list__definition"><section class="phpdocumentor-description"><p>Search order. Latest followings: 'date_followed_latest',
 earliest followings: 'date_followed_earliest'.</p></section></dd>
                     </dl>
     
@@ -1817,7 +1817,7 @@ earliest followings: 'date_followed_earliest'.</p></section></dd>
                     <span class="phpdocumentor-signature__argument__name">$order</span>
                     : <span class="phpdocumentor-signature__argument__return-type">string|null</span>
                      = <span class="phpdocumentor-signature__argument__default-value">null</span>                </dt>
-                <dd class="phpdocumentor-argument-list__definition"><section class="phpdocumentor-description"><p>Search order. Latest followings: 'date_followed_earliest',
+                <dd class="phpdocumentor-argument-list__definition"><section class="phpdocumentor-description"><p>Search order. Latest followings: 'date_followed_latest',
 earliest followings: 'date_followed_earliest'.</p></section></dd>
                     </dl>
     
