--- a/documentation/namespaces/instagramapi-response.html
+++ b/documentation/namespaces/instagramapi-response.html
@@ -548,13 +548,13 @@
                             <dt><a href="../classes/InstagramAPI-Response-HasInteropUpgradedResponse.html"><abbr title="\InstagramAPI\Response\HasInteropUpgradedResponse">HasInteropUpgradedResponse</abbr></a></dt>
                 <dd>HasInteropUpgradedResponse.</dd>
                             <dt><a href="../classes/InstagramAPI-Response-MusicGenresResponse.html"><abbr title="\InstagramAPI\Response\MusicGenresResponse">MusicGenresResponse</abbr></a></dt>
-                <dd>Core class for Instagram API responses.</dd>
+                <dd>MusicGenresResponse.</dd>
                             <dt><a href="../classes/InstagramAPI-Response-LiveArchiveSettingsResponse.html"><abbr title="\InstagramAPI\Response\LiveArchiveSettingsResponse">LiveArchiveSettingsResponse</abbr></a></dt>
                 <dd>LiveArchiveSettingsResponse.</dd>
                             <dt><a href="../classes/InstagramAPI-Response-LiveArchiveResponse.html"><abbr title="\InstagramAPI\Response\LiveArchiveResponse">LiveArchiveResponse</abbr></a></dt>
                 <dd>LiveArchiveResponse.</dd>
                             <dt><a href="../classes/InstagramAPI-Response-TwoFactorNotificationStatusResponse.html"><abbr title="\InstagramAPI\Response\TwoFactorNotificationStatusResponse">TwoFactorNotificationStatusResponse</abbr></a></dt>
-                <dd>Core class for Instagram API responses.</dd>
+                <dd>TwoFactorNotificationStatusResponse.</dd>
             
                     </dl>
     
