--- a/documentation/indices/files.html
+++ b/documentation/indices/files.html
@@ -564,6 +564,7 @@
                     <li><a href="../files/src-response-model-unpredictablekeys-presenceunpredictablecontainer.html"><abbr title="src/Response/Model/UnpredictableKeys/PresenceUnpredictableContainer.php">PresenceUnpredictableContainer.php</abbr></a></li>
                     <li><a href="../files/src-response-presencesresponse.html"><abbr title="src/Response/PresencesResponse.php">PresencesResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-primarycountryinfo.html"><abbr title="src/Response/Model/PrimaryCountryInfo.php">PrimaryCountryInfo.php</abbr></a></li>
+                    <li><a href="../files/src-response-privatestoriesmembersresponse.html"><abbr title="src/Response/PrivateStoriesMembersResponse.php">PrivateStoriesMembersResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-product.html"><abbr title="src/Response/Model/Product.php">Product.php</abbr></a></li>
                     <li><a href="../files/src-response-model-productimage.html"><abbr title="src/Response/Model/ProductImage.php">ProductImage.php</abbr></a></li>
                     <li><a href="../files/src-response-model-productshare.html"><abbr title="src/Response/Model/ProductShare.php">ProductShare.php</abbr></a></li>
