--- a/documentation/files/src-response-privatestoriesmembersresponse.html
+++ b/documentation/files/src-response-privatestoriesmembersresponse.html
@@ -71,7 +71,7 @@
     <li><a href="../index.html">Home</a></li>
                 </ul>
 
-    <h2>Story.php</h2>
+    <h2>PrivateStoriesMembersResponse.php</h2>
 
     
     
